--- a/index.html
+++ b/index.html
@@ -559,7 +559,7 @@
     <div class="video-item">
       <div class="video-wrapper">
         <iframe 
-          src="https://www.youtube.com/embed/E1ywBM07Ia8" 
+          src="https://www.youtube.com/embed/t6MNGJ-6AIw" 
           frameborder="0" 
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
           allowfullscreen>
@@ -571,7 +571,7 @@
     <div class="video-item">
       <div class="video-wrapper">
         <iframe 
-          src="https://www.youtube.com/embed/gi-3HTZLnSQ" 
+          src="https://www.youtube.com/embed/E1ywBM07Ia8" 
           frameborder="0" 
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
           allowfullscreen>
@@ -595,7 +595,7 @@
     <div class="video-item">
       <div class="video-wrapper">
         <iframe 
-          src="https://www.youtube.com/embed/t6MNGJ-6AIw" 
+          src="https://www.youtube.com/embed/gi-3HTZLnSQ" 
           frameborder="0" 
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
           allowfullscreen>
@@ -818,6 +818,7 @@
         </style>
         <!-- END section -->
     <!-- Equipo astronomico -->
+
     <section id="equipo" class="site-section bg-light">
       <div class="container-fluid">
         <div class="row mb-5">
@@ -827,9 +828,10 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-12 col-sm-6 col-md-3 d-flex">
+          <!-- Team Member 1 -->
+          <div class="col-12 col-sm-6 col-md-4 d-flex">
             <div class="post-entry flex-fill">
-              <img src="images/person_1.jpg" alt="Image placeholder" class="img-fluid">
+              <img src="images/patricia.png" alt="Patricia Ordoñez" class="img-fluid team-img">
               <div class="body-text">
                 <div class="category">Co-Fundador</div>
                 <h3 class="mb-3"><a href="#">Patricia Ordoñez</a></h3>
@@ -838,9 +840,10 @@
               </div>
             </div>
           </div>
-          <div class="col-12 col-sm-6 col-md-3 d-flex">
+          <!-- Team Member 2 -->
+          <div class="col-12 col-sm-6 col-md-4 d-flex">
             <div class="post-entry flex-fill">
-              <img src="images/cajas.png" alt="Image placeholder" class="img-fluid">
+              <img src="images/cajas.png" alt="Sebastián Cajas Ordóñez" class="img-fluid team-img">
               <div class="body-text">
                 <div class="category">Co-fundador e Intérprete de Astronomía</div>
                 <h3 class="mb-3"><a href="#">Sebastián Cajas Ordóñez</a></h3>
@@ -849,9 +852,10 @@
               </div>
             </div>
           </div>
-          <div class="col-12 col-sm-6 col-md-3 d-flex">
+          <!-- Team Member 3 -->
+          <div class="col-12 col-sm-6 col-md-4 d-flex">
             <div class="post-entry flex-fill">
-              <img src="images/alejandro.jpeg" alt="Image placeholder" class="img-fluid">
+              <img src="images/alejandro.jpeg" alt="Juan Alejandro Cárdenas" class="img-fluid team-img">
               <div class="body-text">
                 <div class="category">Intérprete de Astronomía</div>
                 <h3 class="mb-3"><a href="#">Juan Alejandro Cárdenas</a></h3>
@@ -860,9 +864,10 @@
               </div>
             </div>
           </div>
-          <div class="col-12 col-sm-6 col-md-3 d-flex">
+          <!-- Team Member 4 -->
+          <div class="col-12 col-sm-6 col-md-4 d-flex">
             <div class="post-entry flex-fill">
-              <img src="images/orozco.png" alt="Image placeholder" class="img-fluid">
+              <img src="images/orozco.png" alt="Sebastián Orozco Monje" class="img-fluid team-img">
               <div class="body-text">
                 <div class="category">Intérprete de Astronomía</div>
                 <h3 class="mb-3"><a href="#">Sebastián Orozco Monje</a></h3>
@@ -871,20 +876,22 @@
               </div>
             </div>
           </div>
-          <div class="col-12 col-sm-6 col-md-3 d-flex">
+          <!-- Team Member 5 -->
+          <div class="col-12 col-sm-6 col-md-4 d-flex">
             <div class="post-entry flex-fill">
-              <img src="images/alejandra.png" alt="Image placeholder" class="img-fluid">
+              <img src="images/alejandra.png" alt="Alejandra Guzmán Troya" class="img-fluid team-img">
               <div class="body-text">
                 <div class="category">Intérprete de Astronomía</div>
                 <h3 class="mb-3"><a href="#">Alejandra Guzmán Troya</a></h3>
-                <p class="mb-4">Alejandra Guzmán Troya es estudiante de medicina, divulgadora científica y aficionada por la astronomía y la medicina espacial. Ejerce como interprete en el Observatorio Astronómico Francisco José de Caldas, guiando la observación astronómica y compartiendo el conocimiento con nuestros visitantes a través de charlas educativas sobre las maravillas del universo.</p>
+                <p class="mb-4">Alejandra Guzmán Troya es estudiante de medicina, divulgadora científica y aficionada por la astronomía y la medicina espacial. Ejerce como intérprete en el Observatorio Astronómico Francisco José de Caldas, guiando la observación astronómica y compartiendo el conocimiento con nuestros visitantes a través de charlas educativas sobre las maravillas del universo.</p>
                 <p><a href="#" class="btn btn-primary btn-outline-primary btn-sm">Leer Más</a></p>
               </div>
             </div>
           </div>
-          <div class="col-12 col-sm-6 col-md-3 d-flex">
+          <!-- Team Member 6 -->
+          <div class="col-12 col-sm-6 col-md-4 d-flex">
             <div class="post-entry flex-fill">
-              <img src="images/estefany.png" alt="Image placeholder" class="img-fluid">
+              <img src="images/estefany.png" alt="Estefany Lozano" class="img-fluid team-img">
               <div class="body-text">
                 <div class="category">Personal</div>
                 <h3 class="mb-3"><a href="#">Estefany Lozano</a></h3>
@@ -893,21 +900,9 @@
               </div>
             </div>
           </div>
-          <div class="col-12 col-sm-6 col-md-3 d-flex">
-            <div class="post-entry flex-fill">
-              <img src="images/person_2.jpg" alt="Image placeholder" class="img-fluid">
-              <div class="body-text">
-                <div class="category">Personal</div>
-                <h3 class="mb-3"><a href="#">Edinson</a></h3>
-                <p class="mb-4">Edinson es un colaborador clave en el desarrollo del ecodestino, destacándose como diseñador y organizador de logística. Su enfoque meticuloso en la planificación y ejecución garantiza el éxito de cada proyecto. Con experiencia en construcción y mantenimiento, Edinson contribuye a crear un espacio sostenible y atractivo para visitantes y la comunidad.</p>
-                <p><a href="#" class="btn btn-primary btn-outline-primary btn-sm">Leer Más</a></p>
-              </div>
-            </div>
-          </div>
         </div>
       </div>
     </section>
-    
      <!-- Fin Equipo astronomico -->
     
         <section id="historia" class="site-section">
