--- a/index.html
+++ b/index.html
@@ -900,6 +900,18 @@
               </div>
             </div>
           </div>
+                    <!-- Team Member 6 -->
+          <div class="col-12 col-sm-6 col-md-4 d-flex">
+                      <div class="post-entry flex-fill">
+                        <img src="images/joiner.jpeg" alt="Yoiner Libardo Uribe" class="img-fluid team-img">
+                        <div class="body-text">
+                          <div class="category">Personal</div>
+                          <h3 class="mb-3"><a href="#">Yoiner Libardo Uribe</a></h3>
+                          <p class="mb-4">Yoiner Libardo Uribe es un pilar en el desarrollo del ecodestino, destacando su trabajo  en actividades de construcción, agricultura orgánica, electricidad, hidráulico y logística. Su planificación meticulosa asegura el éxito de cada proyecto. Con experiencia en servicio al cliente, disponibilidad asegurada y muy buena actitud.</p>
+                          <p><a href="#" class="btn btn-primary btn-outline-primary btn-sm">Leer Más</a></p>
+                        </div>
+                      </div>
+         </div>
         </div>
       </div>
     </section>
