--- a/index.html
+++ b/index.html
@@ -912,6 +912,19 @@
                         </div>
                       </div>
          </div>
+
+         <div class="col-12 col-sm-6 col-md-4 d-flex">
+          <div class="post-entry flex-fill">
+            <img src="images/person_2.jpg" alt="Image placeholder" class="img-fluid">
+            <div class="body-text">
+              <div class="category">Personal</div>
+              <h3 class="mb-3"><a href="#">Edinson</a></h3>
+              <p class="mb-4">Edinson juega un papel fundamental en el desarrollo del ecodestino, destacándose en el diseño y la gestión logística. Su atención al detalle en la planificación y ejecución asegura el éxito de cada iniciativa. Con una sólida experiencia en construcción y mantenimiento, aporta al desarrollo de un entorno sostenible y acogedor tanto para los visitantes como para la comunidad.</p>
+              <p><a href="#" class="btn btn-primary btn-outline-primary btn-sm">Leer Más</a></p>
+            </div>
+          </div>
+        </div>
+
         </div>
       </div>
     </section>
