adding links to profiles

--- a/index.html
+++ b/index.html
@@ -1057,9 +1057,9 @@
               <img src="images/s.maca.jpeg" alt="Sebastián Maca" class="img-fluid team-img">
               <div class="body-text">
                 <div class="category">Intérprete de Astronomía</div>
-                <h3 class="mb-3"><a href="#">Sebastián Maca</a></h3>
+                <h3 class="mb-3"><a href="https://www.linkedin.com/in/sebastian-maca-orozco-5a21981b3">Sebastián Maca</a></h3>
                 <p class="mb-4">Sebastián Maca, ingeniero físico, astrónomo aficionado e intérprete astronómico en el Observatorio Francisco José de Caldas, se dedica a la observación de planetas, al estudio de constelaciones y a la realización de diversas charlas astronómicas, compartiendo sus conocimientos y su pasión por el universo con visitantes y entusiastas. Su labor incluye guiar al público en recorridos nocturnos para señalar cuerpos celestes de interés, fomentar la curiosidad científica y divulgar los últimos hallazgos en el campo de la astronomía.</p>
-                <p><a href="#" class="btn btn-primary btn-outline-primary btn-sm">Leer Más</a></p>
+                <p><a href="https://www.linkedin.com/in/sebastian-maca-orozco-5a21981b3" class="btn btn-primary btn-outline-primary btn-sm">Leer Más</a></p>
               </div>
             </div>
             
