--- a/index.html
+++ b/index.html
@@ -1030,7 +1030,7 @@
           <!-- Team Member 1 -->
           <div class="col-12 col-sm-6 col-md-4 d-flex">
             <div class="post-entry flex-fill">
-              <img src="images/patricia.png" alt="Patricia Ordoñez" class="img-fluid team-img">
+              <img src="gallery/equipo/patricia.png" alt="Patricia Ordoñez" class="img-fluid team-img">
               <div class="body-text">
                 <div class="category">Co-Fundador</div>
                 <h3 class="mb-3"><a href="#">Patricia Ordoñez</a></h3>
@@ -1042,7 +1042,7 @@
           <!-- Team Member 2 -->
           <div class="col-12 col-sm-6 col-md-4 d-flex">
             <div class="post-entry flex-fill">
-              <img src="images/cajas.png" alt="Sebastián Cajas Ordóñez" class="img-fluid team-img">
+              <img src="gallery/equipo/cajas.png" alt="Sebastián Cajas Ordóñez" class="img-fluid team-img">
               <div class="body-text">
                 <div class="category">Co-fundador e Intérprete de Astronomía</div>
                 <h3 class="mb-3"><a href="#">Sebastián Cajas Ordóñez</a></h3>
@@ -1054,7 +1054,7 @@
           <!-- Team Member 3 -->
           <div class="col-12 col-sm-6 col-md-4 d-flex">
             <div class="post-entry flex-fill">
-              <img src="images/s.maca.jpeg" alt="Sebastián Maca" class="img-fluid team-img">
+              <img src="gallery/equipo/s.maca.jpeg" alt="Sebastián Maca" class="img-fluid team-img">
               <div class="body-text">
                 <div class="category">Intérprete de Astronomía</div>
                 <h3 class="mb-3"><a href="https://www.linkedin.com/in/sebastian-maca-orozco-5a21981b3">Sebastián Maca</a></h3>
@@ -1067,11 +1067,11 @@
           <!-- Team Member 4 -->
           <div class="col-12 col-sm-6 col-md-4 d-flex">
             <div class="post-entry flex-fill">
-              <img src="gallery/Julian.png" alt="Juan Alejandro Cárdenas" class="img-fluid team-img">
+              <img src="gallery/equipo/Julian.png" alt="Juan Alejandro Cárdenas" class="img-fluid team-img">
               <div class="body-text">
-                <div class="category">Intérprete de Astronomía</div>
+                <div class="category">Ingeniero Físico con Enfoque en Ciencias Agrarias y Educación</div>
                 <h3 class="mb-3"><a href="#">Julián Libardo Álbarez</a></h3>
-                <p class="mb-4">Julián, ingeniero físico, astrónomo aficionado e intérprete astronómico en el Observatorio Francisco José de Caldas, cursa actualmente una maestría y se enfoca en la observación de planetas, el estudio de constelaciones y la realización de charlas astronómicas, compartiendo su pasión por el universo con visitantes y entusiastas. Su trabajo también abarca guiar recorridos nocturnos para destacar cuerpos celestes de interés, motivar la curiosidad científica y difundir los últimos avances en el ámbito de la astronomía..</p>
+                <p class="mb-4">Julián Alvarez, Ingeniero Físico con conocimientos en ciencias agrarias, es un apasionado educador de física, astronomía, historia y biología. Su enfoque interdisciplinario conecta la ciencia con aplicaciones agrícolas, utilizando tecnologías avanzadas. Diseña estrategias educativas para simplificar conceptos científicos complejos, fomentando la curiosidad y el pensamiento crítico. Integra innovaciones tecnológicas en el sector agropecuario, promoviendo prácticas sostenibles y eficientes. Su versatilidad lo destaca como un profesional comprometido con la educación, el desarrollo tecnológico y la relación ciencia-naturaleza.</p>
                 <p><a href="" class="btn btn-primary btn-outline-primary btn-sm">Leer Más</a></p>
               </div>
             </div>
@@ -1090,7 +1090,7 @@
           <!-- Team Member 5 -->
           <div class="col-12 col-sm-6 col-md-4 d-flex">
             <div class="post-entry flex-fill">
-              <img src="images/alejandra.png" alt="Alejandra Guzmán Troya" class="img-fluid team-img">
+              <img src="gallery/equipo/alejandra.png" alt="Alejandra Guzmán Troya" class="img-fluid team-img">
               <div class="body-text">
                 <div class="category">Intérprete de Astronomía</div>
                 <h3 class="mb-3"><a href="#">Alejandra Guzmán Troya</a></h3>
@@ -1102,7 +1102,7 @@
           <!-- Team Member 6 -->
           <div class="col-12 col-sm-6 col-md-4 d-flex">
             <div class="post-entry flex-fill">
-              <img src="images/estefany.png" alt="Estefany Lozano" class="img-fluid team-img">
+              <img src="gallery/equipo/estefany.png" alt="Estefany Lozano" class="img-fluid team-img">
               <div class="body-text">
                 <div class="category">Personal</div>
                 <h3 class="mb-3"><a href="#">Estefany Lozano</a></h3>
@@ -1114,7 +1114,7 @@
                     <!-- Team Member 6 -->
           <div class="col-12 col-sm-6 col-md-4 d-flex">
                       <div class="post-entry flex-fill">
-                        <img src="images/joiner.jpeg" alt="Yoiner Libardo Uribe" class="img-fluid team-img">
+                        <img src="gallery/equipo/joiner.jpeg" alt="Yoiner Libardo Uribe" class="img-fluid team-img">
                         <div class="body-text">
                           <div class="category">Personal</div>
                           <h3 class="mb-3"><a href="#">Yoiner Libardo Uribe</a></h3>
@@ -1139,7 +1139,7 @@
 
         <div class="col-12 col-sm-6 col-md-4 d-flex">
           <div class="post-entry flex-fill">
-            <img src="images/alejandro.jpeg" alt="Juan Alejandro Cárdenas" class="img-fluid team-img">
+            <img src="gallery/equipo/alejandro.jpeg" alt="Juan Alejandro Cárdenas" class="img-fluid team-img">
             <div class="body-text">
               <div class="category">Intérprete de Astronomía</div>
               <h3 class="mb-3"><a href="#">Juan Alejandro Cárdenas</a></h3>
