--- a/index.html
+++ b/index.html
@@ -1040,7 +1040,7 @@
 
          <div class="col-12 col-sm-6 col-md-4 d-flex">
           <div class="post-entry flex-fill">
-            <img src="images/person_2.jpg" alt="Image placeholder" class="img-fluid">
+            <img src="gallery/equipo/edinson.png" alt="Image placeholder" class="img-fluid">
             <div class="body-text">
               <div class="category">Personal</div>
               <h3 class="mb-3"><a href="#">Edinson</a></h3>
